fixed word wrap issue

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -23,5 +23,6 @@
 #apply {
     & a {
         color: #FFFFFF;
+        word-break: break-all;
     }
 }
